<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainMenuActivity"
    android:background="@color/backgroundColor">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:background="@color/colorForHeadAndBtn">

        <ImageView
            android:id="@+id/info"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_45sdp"
            android:background="@drawable/info" />

        <ImageView
            android:id="@+id/search"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerInParent="true"
            android:background="@drawable/search" />

        <ImageView
            android:id="@+id/home"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_45sdp"
            android:background="@drawable/home" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="704dp">

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAlphabet"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Alphabet"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_159sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_158sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewPronouns"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Pronouns"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_100sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewAdjectives"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="151dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Adjectives"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginStart="@dimen/_158sdp"
                android:layout_marginTop="@dimen/_100sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewPolite_words"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Polite_words"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_200sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewMoney"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Money"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_158sdp"
                android:layout_marginTop="@dimen/_200sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewPeople"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/People"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_300sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewDocuments"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Documents"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_158sdp"
                android:layout_marginTop="@dimen/_300sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewColors"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Colors"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_400sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewFamily"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Family"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/_158sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_158sdp"
                android:layout_marginTop="@dimen/_400sdp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewQuestions"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    app:cardBackgroundColor="@color/colorForWidget"
                    app:cardCornerRadius="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Questions"
                        android:textColor="@color/textColor"
                        android:textSize="@dimen/_14sdp" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>